[MOSIP-43633] - calender fix
Signed-off-by: Nidhi0201 <nidhi.k@cyberpwn.com>